--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -32,9 +32,9 @@
                             <input class="uk-input" type="text" placeholder="Email" name="Email" required>
                         </div>
                         <div class="uk-width-1-1">
-                            <select class="uk-select" required>
-                                <option name="single">Single Agent - $79/mo</option>
-                                <option name="teambroker">Team/Broker - $99/mo</option>
+                            <select class="uk-select" name="package" required>
+                                <option value="single">Single Agent - $79/mo</option>
+                                <option value="teambroker">Team/Broker - $99/mo</option>
                             </select>
                         </div>
                         <div class="uk-width-1-1">
