--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,7 +2,7 @@
 <div class="uk-section uk-section-small" id="blog-wrapper">
     <div class="uk-container">
         <div uk-grid>
-            <div class="uk-width-3-4">
+            <div class="uk-width-3-4@s">
                 <div class="uk-card uk-card-body">
                     <ul class="uk-list">
                         <li class="uk-display-inline-block accent-svg"><span uk-icon="icon: tag"></span></li>
@@ -25,7 +25,7 @@
                 </div>
 
             </div>
-            <div class="uk-width-expand">
+            <div class="uk-width-expand@s">
                 <div class="uk-card uk-card-body">
                     <h5>Categories</h5>
                     <ul class="uk-list">
