--- a/layouts/partials/global/schema.html
+++ b/layouts/partials/global/schema.html
@@ -1,24 +1,11 @@
 <script type="application/ld+json">
-{
-	"@context": "https://schema.org",
-	"@graph": [{
-		"@type": "WebSite",
-		"@id": "https://www.hungryram.com/#website",
-		"url": "https://www.hungryram.com/",
-		"name": "Hungry Ram",
-	}, {
-		"@type": "WebPage",
-		"@id": "https://www.hungryram.com/agent-idx-websites/#webpage",
-		"url": "https://www.hungryram.com/agent-idx-websites/",
-		"inLanguage": "en-US",
-		"name": "Agent IDX Websites - Hungry Ram",
-		"isPartOf": {
-			"@id": "https://www.hungryram.com/#website"
-		},
-		"description": "Grow your leads with a real estate website that is faster and more secure than traditional sites."
-	}]
-}
-</script>
+    {
+      "@context": "https://schema.org/",
+      "@type": "WebSite",
+      "name": "Hungry Ram",
+      "url": "https://www.hungryram.com/"
+    }
+    </script>
 
 <script type="application/ld+json">
     {
