--- a/layouts/partials/global/schema.html
+++ b/layouts/partials/global/schema.html
@@ -5,8 +5,7 @@
       "name": "Hungry Ram",
       "url": "https://www.hungryram.com/"
     }
-    </script>
-
+</script>
 <script type="application/ld+json">
     {
         "@context": "http://schema.org",
@@ -37,8 +36,8 @@
             "addressCountry": "United States",
             "addressLocality": "Orange County",
             "addressRegion": "CA",
-            "postalCode": "92886",
-            "streetAddress": null
+            "postalCode": "92887",
+            "streetAddress": "5511 Mirage Street #1007"
         }
     }
 </script>
