--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -8,15 +8,15 @@
                 <ul class="uk-list">
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>SSL security Installed</li>
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>No contract cancel anytime</li>
-                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Unlimited support</li>
+                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Superior support</li>
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Hosted on lightning fast servers</li>
-                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Site back up</li>
-                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>We pay for your MLS data fee</li>
+                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Site back ups</li>
+                    <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>Search Engine Optimized</li>
                 </ul>
             </div>
             <div class="uk-width-1-2@s">
                 <div class="uk-card uk-card-default" style="padding: 30px;">
-                    <h3>Fast and Easy <span class="accent">Sign up</span></h3>
+                    <h3>Your <span class="accent">FREE</span> website starts after you sign up</h3>
                     <form name="Website Special" method="POST" netlify-honeypot="bot-field" data-netlify="true" class="uk-grid-small" uk-grid action="/thank-you">
                         <input name="bot-field" type="hidden" />
                         <input type="hidden" name="Subject" value="Website Contact Form">
@@ -38,10 +38,16 @@
                             </select>
                         </div>
                         <div class="uk-width-1-1">
+                            <small>*Direct or pass-through fees may be applicable depending on your MLS board</small>
+                        </div>
+                        <div class="uk-width-1-1">
                             <textarea class="uk-textarea" rows="5" placeholder="Questions and comments" name="comments"></textarea>
                         </div>
                         <div class="uk-width-1-1">
                             <button class="uk-button uk-button-secondary modal-button">Build my website</button>
+                        </div>
+                        <div class="uk-width-1-1">
+                            <small>By submitting the form with your information above you are agreeing to our <a style="color:#2196f3" href="/legal/terms-and-conditions">Terms and Conditions</a> and <a style="color:#2196f3" href="/legal/privacy-policy">Privacy Policy</a></small>
                         </div>
                     </form>
                 </div>
