--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -6,13 +6,9 @@
                 {{ range .Pages }}
                 <li>
                     <div class="uk-card uk-card-default">
-                        <div class="uk-card-media-top uk-cover-container">
-                            <canvas height="200"></canvas>
-                            <img src="{{ .Params.featured_image }}" alt="{{ .Params.image_alt_tag }}" uk-cover>
-                        </div>
                         <div class="uk-card-body more-projects" style="padding: 30px 25px">
                             <h3 class="uk-h4">{{ .Title }}</h3>
-                            <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold">Read post</span><span href="#" uk-icon="icon: chevron-right" class="uk-margin-small-right"></span></a>
+                            <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold">View More</span><span href="#" uk-icon="icon: chevron-right" class="uk-margin-small-right"></span></a>
                         </div>
                     </div>
                 </li>
