--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -20,7 +20,7 @@
             </div>
             <div class="uk-grid-column-collapse uk-child-width-1-4@s" uk-grid>
                 <div>
-                    <h6 class="uk-text-bold accent">Quick Links</h6>
+                    <h2 class="uk-text-bold accent uk-h6">Quick Links</h2>
                     <ul class="uk-list">
                         <li><a href="/contact">Contact</a></li>
                         <li><a href="/services">Services</a></li>
@@ -29,7 +29,7 @@
                     </ul>                
                 </div>
                 <div>
-                    <h6 class="uk-text-bold accent">Real Estate Website</h6>
+                    <h2 class="uk-text-bold accent uk-h6">Real Estate Website</h2>
                     <ul class="uk-list">
                         <li><a href="/real-estate-agent-websites">Agent Websites</a></li>
                         <li><a href="/real-estate-broker-websites">Broker Websites</a></li>
@@ -39,7 +39,7 @@
                     </ul>                
                 </div>
                 <div>
-                    <h6 class="uk-text-bold accent">Small Business Website</h6>
+                    <h2 class="uk-text-bold accent uk-h6">Small Business Website</h2>
                     <ul class="uk-list">
                         <li><a href="/custom-website-design">Custom Website</a></li>
                         <li><a href="/ecommerce-website-design">Ecommerce Website</a></li>
@@ -47,7 +47,7 @@
                 </div>
                 <div>
                     <div class="footer-text">
-                        <h6 class="uk-text-bold accent">Hungry Ram</h6>
+                        <h2 class="uk-text-bold accent uk-h6">Hungry Ram</h2>
                         <p>{{ .Site.Data.appearance.footer.body }}</p>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
     <div class="uk-container uk-padding">
         <div class="uk-grid">
             <div class="uk-width-1-2@s">
-                <p class="uk-light uk-text-small">&copy; Copyright {{ dateFormat "2006" now }}, {{ .Site.Data.profile.company_name }}  &middot; <a href="https://hungryram.com" target="_blank">Website Developed by Hungry Ram</a></p>
+                <p class="uk-light uk-text-small">&copy; Copyright {{ dateFormat "2006" now }}, {{ .Site.Data.profile.company_name }}</p>
                 <ul class="hr-legals uk-padding-remove">
                     {{ range where $.Site.Pages.ByWeight "Type" "legal" }}
                     <li class="uk-light uk-text-small uk-display-inline uk-margin-medium-right"><a href="{{ .Permalink }}">{{ .Title }}</a></li>
