--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -23,8 +23,8 @@
             <div uk-navbar="dropbar: true" delay-hide="50">
                 <div class="uk-navbar-left">
                     <a href="{{ .Site.BaseURL }}">
-                        <img src="{{ .Site.Data.appearance.branding.logo }}" alt="" width="200" class="dark-logo">
-                        <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="" width="200" class="white-logo">
+                        <img src="{{ .Site.Data.appearance.branding.logo }}" alt="{{ .Site.Data.profile.company_name }}" width="200" class="dark-logo">
+                        <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="{{ .Site.Data.profile.company_name }}" width="200" class="white-logo">
                     </a>
 
                 </div>
