--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -8,7 +8,7 @@
                         <img src="{{ .image }}" alt="{{ .image_alt }}" style="object-fit: contain;" width="100" height="100">
                     </div>
                     <div class="uk-card-body">
-                        <h3 class="uk-card-title">{{ .heading }}</h3>
+                        <h2 class="uk-card-title uk-h3" style="font-size: 1.2rem;">{{ .heading }}</h2>
                         <p>{{ .body }}</p>
                     </div>
                 </div>
