--- a/layouts/partials/home/work.html
+++ b/layouts/partials/home/work.html
@@ -28,7 +28,7 @@
                     <div class="uk-card uk-card-default uk-card-body uk-cover-container portfolio-page">
                         <a href="{{ .Permalink }}" data-caption="">
                             <canvas height="300"></canvas>
-                            <img src="{{ .Params.featured_image }}" alt="" uk-cover>
+                            <img src="{{ .Params.featured_image }}" alt="{{ .Title }} web design" uk-cover>
                         </a>
                     </div>
                 </li>
