--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -5,19 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{.Site.BaseURL}}/css/styles.css">
-    <link rel="shortcut icon" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="canonical" href="{{ .Permalink }}" />
-    {{ partial "global/seo" . }}
-    <link rel="apple-touch-icon" sizes="152x152" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="apple-touch-icon" sizes="144x144" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="apple-touch-icon" sizes="120x120" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <link rel="apple-touch-icon" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <!-- FAVICON -->
-    <link rel="shortcut icon" href="{{ .Site.Data.appearance.branding.favicon }}" />
-    <meta name="application-name" content="{{ .Site.Data.profile.company_name }}">
+    
+    {{ partial "global/seo2" . }}
 
     {{ if .IsHome }}
     {{ partial "global/schema" . }}
