--- a/layouts/partials/global/seo2.html
+++ b/layouts/partials/global/seo2.html
@@ -29,7 +29,7 @@
 <meta name="application-name" content="{{ $profile.company_name }}" />
 <meta property="og:site_name" content="{{ $profile.company_name }}" />
 
-<!-- Description -->
+<!-- DESCRIPTION -->
 {{ with .Params.search_engine_optimization.meta_description | default .Params.meta_description | default $fallBackDesc | default $summary }}<meta name="description" content="{{ . }}" />{{ end }} 
 {{ with .Params.search_engine_optimization.meta_description | default .Params.meta_description | default $fallBackDesc | default $summary }}<meta property="og:description" content="{{ . }}" />{{ end }}
 {{ with .Params.search_engine_optimization.meta_description | default .Params.meta_description | default $fallBackDesc | default $summary }}<meta name="twitter:description" content="{{ . }}" />{{ end }}
@@ -41,7 +41,7 @@
 {{ if .Params.is_post }}
 <meta property="og:article:published_time" content={{ .Date.Format "2006-01-02" | safeHTML }} /> 
 <meta property="article:published_time" content={{ .Date.Format "2006-01-02" | safeHTML }} />
-{{ end }}
+{{ end }} <!-- End Home Statement -->
 
 <link rel="apple-touch-icon" sizes="152x152" href="{{ $favicon }}" />
 <link rel="apple-touch-icon" sizes="144x144" href="{{ $favicon }}" />
