--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -67,5 +67,8 @@
         </div>
     </div>
 </footer>
+<!-- UIkit JS -->
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/js/uikit-icons.min.js"></script>
 </body>
 </html>
