--- a/layouts/partials/global/seo2.html
+++ b/layouts/partials/global/seo2.html
@@ -1,24 +1,23 @@
-{{ $seo := .Site.Data.profile.search_engine_optimization }}
-{{ $profile := .Site.Data.profile }}
-{{ $logo := .Site.Data.appearance.branding.logo }}
-{{ $favicon := .Site.Data.appearance.branding.favicon }}
-{{ $fallBackDesc := .Params.body | truncate 170 }}
-{{ $summary := .Summary | truncate 170 }}
-
+{{- $seo := .Site.Data.profile.search_engine_optimization -}}
+{{- $profile := .Site.Data.profile }}
+{{- $logo := .Site.Data.appearance.branding.logo -}}
+{{- $favicon := .Site.Data.appearance.branding.favicon -}}
+{{- $fallBackDesc := .Params.body | truncate 170 -}}
+{{- $summary := .Summary | truncate 170 -}}
 <meta property="og:locale" content="en_US" />
-
 {{- if $.IsHome -}}
 <!-- HOME PAGE SEO -->
 <title>{{ $seo.title_tag }}</title>
+<!-- HOME TITLE -->
 <meta property="og:title" content="{{ $seo.title_tag }}" />
 <meta name="twitter:title" content="{{ $seo.title_tag }}" />
 <meta name="application-name" content="{{ $profile.company_name }}" />
 <meta property="og:site_name" content="{{ $profile.company_name }}" />
-
+<!-- DESCRIPTION HOME -->
 <meta name="description" content="{{ $seo.meta_description }}" />
 <meta property="og:description" content="{{ $seo.meta_description }}" />
 <meta name="twitter:description" content="{{ $seo.meta_description }}" />
-
+<!-- URL -->
 <meta name="twitter:url" content="{{ .Permalink }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
 {{ else }}
@@ -28,21 +27,18 @@
 {{ with .Params.search_engine_optimization.title_tag | default .Params.title_tag }}<meta name="twitter:title" content="{{ . }}" />{{ else }}<meta name="twitter:title" content="{{ .Title }} | {{ $profile.company_name }}" />{{ end }}
 <meta name="application-name" content="{{ $profile.company_name }}" />
 <meta property="og:site_name" content="{{ $profile.company_name }}" />
-
 <!-- DESCRIPTION -->
 {{ with .Params.search_engine_optimization.meta_description | default .Params.meta_description | default $fallBackDesc | default $summary }}<meta name="description" content="{{ . }}" />{{ end }} 
 {{ with .Params.search_engine_optimization.meta_description | default .Params.meta_description | default $fallBackDesc | default $summary }}<meta property="og:description" content="{{ . }}" />{{ end }}
 {{ with .Params.search_engine_optimization.meta_description | default .Params.meta_description | default $fallBackDesc | default $summary }}<meta name="twitter:description" content="{{ . }}" />{{ end }}
-
 {{ end }}
 
 <meta property="og:type" content="{{ if .Params.is_post }}article{{ else }}website{{ end }}"/>
 
-{{ if .Params.is_post }}
+{{- if .Params.is_post }}
 <meta property="og:article:published_time" content={{ .Date.Format "2006-01-02" | safeHTML }} /> 
 <meta property="article:published_time" content={{ .Date.Format "2006-01-02" | safeHTML }} />
-{{ end }} <!-- End Home Statement -->
-
+{{- end }} <!-- End Home Statement -->
 <link rel="apple-touch-icon" sizes="152x152" href="{{ $favicon }}" />
 <link rel="apple-touch-icon" sizes="144x144" href="{{ $favicon }}" />
 <link rel="apple-touch-icon" sizes="120x120" href="{{ $favicon }}" />
