--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -1,15 +1,23 @@
 <div class="uk-section" id="icons-section">
     <div class="uk-container">
-        <div class="uk-child-width-1-4@m uk-text-center uk-grid-small" uk-grid uk-height-match="target: .uk-card">
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-width-2xlarge">
+                <div class="uk-text-center uk-margin-medium-bottom">
+                    <h2>The new way of web development for faster and secure sites of 2021</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="uk-child-width-1-3@m uk-text-center uk-grid-column-large" uk-grid uk-height-match="target: .uk-card">
             {{ range .Site.Data.home.featured_blocks }}
             <div>
                 <div class="uk-card">
                     <div class="uk-card-media-top">
                         <img src="{{ .image }}" alt="{{ .image_alt }}" style="object-fit: contain;" width="100" height="100">
                     </div>
-                    <div class="uk-card-body">
-                        <h2 class="uk-card-title uk-h3" style="font-size: 1.2rem;">{{ .heading }}</h2>
-                        <p>{{ .body }}</p>
+                    <div class="uk-card-body" style="padding:15px;">
+                        <h3 class="uk-card-title uk-h3" style="font-size: 1.2rem;">{{ .heading }}</h3>
+                        <p class="uk-text-left">{{ .body }}</p>
                     </div>
                 </div>
             </div>
