update home page seo

--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -3,7 +3,9 @@
         <div class="uk-flex uk-flex-center">
             <div class="uk-width-2xlarge">
                 <div class="uk-text-center uk-margin-medium-bottom">
-                    <h2>The new way of web development for faster and secure sites of 2021</h2>
+                    <h2>We build websites using only the best web development tools</h2>
+                    <p>Hungry Ram is a small web design studio in Yorba Linda, California. Clients choose us because our sites does not rely on website builders like Wordpress and Wix. We focus on coding all our sites from scratch to ensure optimal website speed and security. Every website we build is unique to your business!</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -25,3 +27,4 @@
         </div>
     </div>
 </div>
+
