--- a/layouts/partials/home/image-banner.html
+++ b/layouts/partials/home/image-banner.html
@@ -1,19 +1,16 @@
-<div class="uk-section uk-section-small"></div>
-<div class="uk-child-width-1-1 uk-light" uk-grid>
+<div class="uk-child-width-1-1 uk-light uk-margin-medium-bottom uk-margin-medium-top" uk-grid>
     <div>
-        <div class="uk-background-blend-overlay uk-background-cover uk-height-large uk-flex uk-flex-center uk-flex-middle" style="background-image: url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg); background-position:top" uk-parallax="bgy: -300; easing: 0">
-            <div>
+        <div class="uk-background-blend-overlay uk-background-cover uk-height-large uk-flex uk-flex-center uk-flex-middle" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg); background-position:top">
+            <div class="uk-container">
                 <div class="uk-width-1-1 uk-text-center">
                     <div>
-                        <h3>{{ .Site.Data.home.image_banner.heading }}</h3>
-                        <p class="uk-text-default">{{ .Site.Data.home.image_banner.body }}</p>
+                        <h2>{{ .Site.Data.home.image_banner.heading }}</h2>
+                        <p class="uk-white">{{ .Site.Data.home.image_banner.body }}</p>
                         <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle
-                        >Get Started</a>
-                        
+                        >Sign up</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="uk-section uk-section-small"></div>
