--- a/layouts/partials/global/closing.html
+++ b/layouts/partials/global/closing.html
@@ -8,11 +8,10 @@
                 <p>{{ .Site.Data.home.closing.body }}</p>
                 {{ end }}
                 <div class="uk-margin-medium-top">
-                    <a href="{{ .Site.Data.dev.modal.modal_link }}" class="uk-button uk-button-primary" uk-toggle>Get a quote</a>
+                    <a href="{{ .Site.Data.dev.modal.modal_link }}" class="uk-button uk-button-primary" uk-toggle>Sign up</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 {{ partial "templates/modal" . }}
