--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -4,12 +4,12 @@
         {{ partial "global/navbar" . }}
     </div>
     <div class="hero-text uk-white uk-width-3-5@s uk-text-center uk-flex uk-flex-center" style="margin-left:20px;margin-right: 20px;">
-        <div class="uk-width-2xlarge@s">
+        <div class="uk-width-@s">
             {{ if $hero.heading }}
-            <h1 class="uk-text-bold heading uk-margin-remove uk-white">{{ $hero.heading }}</h1>
+            <h1 class="uk-text-bold heading uk-margin-remove uk-white uk-h2" style="color: #fff;">{{ $hero.heading }}</h1>
             {{ end }}
             {{ if $hero.heading }}
-            <h2 class="uk-text-normal uk-text-default uk-white">{{ $hero.body }}</h2>
+            <h2 class="uk-text-default uk-white">{{ $hero.body }}</h2>
             {{ end }}
             <a href="#modal-signup" class="uk-button-primary uk-button" uk-toggle>Free Estimate</a>
         </div>
